# dropzone

./: .gitignore  README.md  main.py  pyproject.toml
src/dz_scrap/classification/: classifier.py
src/dz_scrap/database/: db_manager.py
src/dz_scrap/ocr/: ocr_processor.py
src/dz_scrap/parsing/: parser.py  patterns.py
src/dz_scrap/rag/: chunker.py
src/dz_scrap/scraping/: scraper.py
tools/: ingest_to_db.py  prepare_for_rag.py  run_full_pipeline.py  run_ocr.py  run_parser.py  run_scraper.py
